// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DismissButton when render with no additional props should match snapshot for error 1`] = `
.c0 {
  border: none;
  position: absolute;
  right: 16px;
  margin-top: -10px;
  top: 50%;
}

.c0 .c1:before {
  color: #668491;
}

.c0 .c1:hover:before {
  color: #335B6D;
}

<div
  className="c0"
/>
`;

exports[`DismissButton when render with no additional props should match snapshot for info 1`] = `
.c0 {
  border: none;
  position: absolute;
  right: 16px;
  margin-top: -10px;
  top: 50%;
}

.c0 .c1:before {
  color: #668491;
}

.c0 .c1:hover:before {
  color: #335B6D;
}

<div
  className="c0"
/>
`;

exports[`DismissButton when render with no additional props should match snapshot for success 1`] = `
.c0 {
  border: none;
  position: absolute;
  right: 16px;
  margin-top: -10px;
  top: 50%;
}

.c0 .c1:before {
  color: #668491;
}

.c0 .c1:hover:before {
  color: #335B6D;
}

<div
  className="c0"
/>
`;

exports[`DismissButton when render with no additional props should match snapshot for warning 1`] = `
.c0 {
  border: none;
  position: absolute;
  right: 16px;
  margin-top: -10px;
  top: 50%;
}

.c0 .c1:before {
  color: #668491;
}

.c0 .c1:hover:before {
  color: #335B6D;
}

<div
  className="c0"
/>
`;

exports[`LinkStyle applies peoper styling when focused 1`] = `
.c1 {
  display: inline-block;
}

.c1 a,
.c1 button {
  font-size: 14px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #26A826;
  display: inline-block;
}

.c1 a .c2,
.c1 button .c2 {
  margin-right: 5px;
  position: relative;
  vertical-align: middle;
}

.c1 a:hover,
.c1 button:hover {
  cursor: pointer;
  color: #006300;
}

.c1 a:focus,
.c1 button:focus {
  color: rgba(0,0,0,0.9);
  background-color: #FFDA7F;
  outline: none;
}

.c1 button {
  background-color: transparent;
  border: none;
  padding: 0;
}

.c0 a:focus {
  outline: none;
  background-color: transparent;
}

.c0 a:focus span:before {
  outline: 2px solid #FFB500;
  outline-offset: 3px;
}

.c0 .carbon-link__content {
  display: none;
}

.c0 .c2 {
  margin-right: 0;
  top: -2px;
}

<div
  className="c0 c1"
  data-component="link"
  disabled={false}
>
  <a
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0"
  >
    <span
      className="carbon-link__content"
    />
  </a>
</div>
`;

exports[`when in classic mode when rendered as default should match the snapshot 1`] = `
.c0 {
  border: none;
  position: absolute;
  right: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  margin-right: 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  position: static;
  min-width: 15px;
}

.c0 .c1:before {
  color: #668491;
}

.c0 .c1:hover:before {
  color: #335B6D;
}

.c0 .c1:before {
  color: #335c6d;
  font-size: 16px;
}

.c0 .c1:hover:before {
  color: #335c6d;
}

<div
  className="c0"
/>
`;

exports[`when in classic mode when rendered as default when transparent prop is set to true should apply transparent background 1`] = `
.c0 {
  border: none;
  position: absolute;
  right: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  margin-right: 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  position: static;
  min-width: 15px;
  background-color: transparent;
}

.c0 .c1:before {
  color: #668491;
}

.c0 .c1:hover:before {
  color: #335B6D;
}

.c0 .c1:before {
  color: #335c6d;
  font-size: 16px;
}

.c0 .c1:hover:before {
  color: #335c6d;
}

<div
  className="c0"
/>
`;

exports[`when in classic mode when rendered as error should match the snapshot 1`] = `
.c0 {
  border: none;
  position: absolute;
  right: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  margin-right: 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  position: static;
  min-width: 15px;
}

.c0 .c1:before {
  color: #668491;
}

.c0 .c1:hover:before {
  color: #335B6D;
}

.c0 .c1:before {
  color: #c7384f;
  font-size: 16px;
}

.c0 .c1:hover:before {
  color: #c7384f;
}

<div
  className="c0"
/>
`;

exports[`when in classic mode when rendered as error when transparent prop is set to true should apply transparent background 1`] = `
.c0 {
  border: none;
  position: absolute;
  right: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  margin-right: 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  position: static;
  min-width: 15px;
  background-color: transparent;
}

.c0 .c1:before {
  color: #668491;
}

.c0 .c1:hover:before {
  color: #335B6D;
}

.c0 .c1:before {
  color: #c7384f;
  font-size: 16px;
}

.c0 .c1:hover:before {
  color: #c7384f;
}

<div
  className="c0"
/>
`;

exports[`when in classic mode when rendered as help should match the snapshot 1`] = `
.c0 {
  border: none;
  position: absolute;
  right: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  margin-right: 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  position: static;
  min-width: 15px;
}

.c0 .c1:before {
  color: #668491;
}

.c0 .c1:hover:before {
  color: #335B6D;
}

.c0 .c1:before {
  color: #ffab00;
  font-size: 16px;
}

.c0 .c1:hover:before {
  color: #ffab00;
}

<div
  className="c0"
/>
`;

exports[`when in classic mode when rendered as help when transparent prop is set to true should apply transparent background 1`] = `
.c0 {
  border: none;
  position: absolute;
  right: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  margin-right: 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  position: static;
  min-width: 15px;
  background-color: transparent;
}

.c0 .c1:before {
  color: #668491;
}

.c0 .c1:hover:before {
  color: #335B6D;
}

.c0 .c1:before {
  color: #ffab00;
  font-size: 16px;
}

.c0 .c1:hover:before {
  color: #ffab00;
}

<div
  className="c0"
/>
`;

exports[`when in classic mode when rendered as info should match the snapshot 1`] = `
.c0 {
  border: none;
  position: absolute;
  right: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  margin-right: 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  position: static;
  min-width: 15px;
}

.c0 .c1:before {
  color: #668491;
}

.c0 .c1:hover:before {
  color: #335B6D;
}

.c0 .c1:before {
  color: #1573e6;
  font-size: 16px;
}

.c0 .c1:hover:before {
  color: #1573e6;
}

<div
  className="c0"
/>
`;

exports[`when in classic mode when rendered as info when transparent prop is set to true should apply transparent background 1`] = `
.c0 {
  border: none;
  position: absolute;
  right: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  margin-right: 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  position: static;
  min-width: 15px;
  background-color: transparent;
}

.c0 .c1:before {
  color: #668491;
}

.c0 .c1:hover:before {
  color: #335B6D;
}

.c0 .c1:before {
  color: #1573e6;
  font-size: 16px;
}

.c0 .c1:hover:before {
  color: #1573e6;
}

<div
  className="c0"
/>
`;

exports[`when in classic mode when rendered as maintenance should match the snapshot 1`] = `
.c0 {
  border: none;
  position: absolute;
  right: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  margin-right: 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  position: static;
  min-width: 15px;
}

.c0 .c1:before {
  color: #668491;
}

.c0 .c1:hover:before {
  color: #335B6D;
}

.c0 .c1:before {
  color: #ff7d00;
  font-size: 16px;
}

.c0 .c1:hover:before {
  color: #ff7d00;
}

<div
  className="c0"
/>
`;

exports[`when in classic mode when rendered as maintenance when transparent prop is set to true should apply transparent background 1`] = `
.c0 {
  border: none;
  position: absolute;
  right: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  margin-right: 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  position: static;
  min-width: 15px;
  background-color: transparent;
}

.c0 .c1:before {
  color: #668491;
}

.c0 .c1:hover:before {
  color: #335B6D;
}

.c0 .c1:before {
  color: #ff7d00;
  font-size: 16px;
}

.c0 .c1:hover:before {
  color: #ff7d00;
}

<div
  className="c0"
/>
`;

exports[`when in classic mode when rendered as new should match the snapshot 1`] = `
.c0 {
  border: none;
  position: absolute;
  right: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  margin-right: 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  position: static;
  min-width: 15px;
}

.c0 .c1:before {
  color: #668491;
}

.c0 .c1:hover:before {
  color: #335B6D;
}

.c0 .c1:before {
  color: #639;
  font-size: 16px;
}

.c0 .c1:hover:before {
  color: #639;
}

<div
  className="c0"
/>
`;

exports[`when in classic mode when rendered as new when transparent prop is set to true should apply transparent background 1`] = `
.c0 {
  border: none;
  position: absolute;
  right: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  margin-right: 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  position: static;
  min-width: 15px;
  background-color: transparent;
}

.c0 .c1:before {
  color: #668491;
}

.c0 .c1:hover:before {
  color: #335B6D;
}

.c0 .c1:before {
  color: #639;
  font-size: 16px;
}

.c0 .c1:hover:before {
  color: #639;
}

<div
  className="c0"
/>
`;

exports[`when in classic mode when rendered as success should match the snapshot 1`] = `
.c0 {
  border: none;
  position: absolute;
  right: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  margin-right: 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  position: static;
  min-width: 15px;
}

.c0 .c1:before {
  color: #668491;
}

.c0 .c1:hover:before {
  color: #335B6D;
}

.c0 .c1:before {
  color: #50b848;
  font-size: 16px;
}

.c0 .c1:hover:before {
  color: #50b848;
}

<div
  className="c0"
/>
`;

exports[`when in classic mode when rendered as success when transparent prop is set to true should apply transparent background 1`] = `
.c0 {
  border: none;
  position: absolute;
  right: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  margin-right: 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  position: static;
  min-width: 15px;
  background-color: transparent;
}

.c0 .c1:before {
  color: #668491;
}

.c0 .c1:hover:before {
  color: #335B6D;
}

.c0 .c1:before {
  color: #50b848;
  font-size: 16px;
}

.c0 .c1:hover:before {
  color: #50b848;
}

<div
  className="c0"
/>
`;

exports[`when in classic mode when rendered as warning should match the snapshot 1`] = `
.c0 {
  border: none;
  position: absolute;
  right: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  margin-right: 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  position: static;
  min-width: 15px;
}

.c0 .c1:before {
  color: #668491;
}

.c0 .c1:hover:before {
  color: #335B6D;
}

.c0 .c1:before {
  color: #ff7d00;
  font-size: 16px;
}

.c0 .c1:hover:before {
  color: #ff7d00;
}

<div
  className="c0"
/>
`;

exports[`when in classic mode when rendered as warning when transparent prop is set to true should apply transparent background 1`] = `
.c0 {
  border: none;
  position: absolute;
  right: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  margin-right: 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  position: static;
  min-width: 15px;
  background-color: transparent;
}

.c0 .c1:before {
  color: #668491;
}

.c0 .c1:hover:before {
  color: #335B6D;
}

.c0 .c1:before {
  color: #ff7d00;
  font-size: 16px;
}

.c0 .c1:hover:before {
  color: #ff7d00;
}

<div
  className="c0"
/>
`;
